# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.839 2009/02/27 07:30:13 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2009/02/27) Added enhancement bug# 3271 Added accessibility of
    Kernel::System::CustomerUser (CustomerUserObject) to bin/cgi-bin/rpc.pl
    (SOAP handle).
 - (2009/02/17) Added group permission support for bulk feature (config via
    SysConfig -> Ticket -> Core::TicketBulkAction).
 - (2009/02/17) Added read only permission support for watched tickets.
 - (2009/02/17) Added agent notification support for watched tickets (config
    via perferences setting for each agent).
 - (2009/02/11) Fixed ticket# 2009020942001554 - generic agent is logging many
    debug infos into log file.
 - (2009/02/09) Fixed bug# 3075 - IntroUpgrade Text is not shown during package
    upgrade in admin interface of package manager.
 - (2009/02/09) Implement the same identifier handling for customer as for
    user. This effects the files Kernel/Ouptut/HTML/*/CustomerNavigationBar.dtl
    and Kernel/Ouptut/HTML/Layout.pm.
 - (2009/02/05) Removed the dtl-if from Header.dtl. And implement a new
    handling to set a indentifier for the user information (usually visible
    on the top of the right side of a page).
 - (2009/02/04) Implement a config option to remove OTRS version tags
    from the http headers.
 - (2009/02/04) Removed a useless slogan from the HTML/DTL-Headers (
    Kernel/Ouptut/HTML/*/Header.dtl, Kernel/Ouptut/HTML/*/Footer.dtl, ...).
 - (2009/01/28) Fixed bug# 3233 - Better error message when adding auto
    responses with same name.
 - (2009/01/26) Removed outdated function FetchrowHashref() from core module
    Kernel/System/DB.pm.